# The-Marionette

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  start.bat
.claude/: settings.local.json
assets/: 11月启境汽车品牌发布会&20日官方直播-尾翼.docx  【0920】岚图梦想家评论brief.docx
prompts/: comment_prompt.py  system_prompt.py
src/: config.py  csv_writer.py  generator.py  models.py  presets.py  validator.py
src/llm/: anthropic_backend.py  base.py  client.py  ollama_backend.py  openai_backend.py
src/parsers/: __init__.py  base.py  classified.py  fallback.py  llm_parser.py  script_lib.py
tests/: test_csv.py  test_generator.py  test_ollama_options.py  test_ollama_unload.py  test_parsers.py
